# cse-eth

./: README.md
Engineering_Optimization/: CardboardBoxGrad.m  Exercise_1_0_b.m  Exercise_1_1_a.m  Exercise_1_1_b.m  Exercise_1_2.m  Exercise_2_1_a.m  Exercise_2_1_b.m  Exercise_2_1_c.m  Exercise_2_1_d.m  Exercise_2_1_e.m  Exercise_2_2_b.m  Exercise_3_1.m  Exercise_3_2_a.m  Exercise_3_2_b.m  Exercise_3_3.m  Exercise_9.m  Exercise_9_2.m  Exercise_9_2_sol.m  HookeAndJeeves.m  LICENSE  README.md  calc_mass.m  myfun.m  myplot.m  myplot3.m  nonlcon_2_1_e.m  nonlcon_3_3.m  wrapper_nonlcon.m
HPCSE I/: README.md
HPCSE I/set1/: riemansum_parallel.cpp  riemansum_parallel_profile.cpp  riemansum_serial.cpp  windows_3Msteps.txt
HPCSE I/set10/: plot.py  plot2.py  plot_mpi.py  test.cpp  vortex_double.cpp  vortex_mpi.cpp  vortex_ser.cpp  vortex_ser_obj.cpp
HPCSE I/set2/: diffusion_par.cpp  diffusion_seq.cpp  diffusion_seq2.cpp  test.cpp
HPCSE I/set3/: diffusion_mp.cpp
HPCSE I/set4/: diff_MC_par.cpp  diff_MC_ser.cpp  testOMP.cpp
HPCSE I/set5/: disks_parS.cpp  disks_serial.cpp  test.cpp
HPCSE I/set6/: diffusion_mpi.cpp  test.cpp
Intro_to_Optimization/: linprog.cpp
PTSS/: README.md
PTSS/ex10/: factory_skeleton.cpp  matrix_multiplication_skeleton.cpp  timeDGEMM.txt
PTSS/ex11/: dsyev.cpp  lapack_test.cpp
PTSS/ex12/: algorithmic_derivation.hpp  algorithmic_derivation_main.cpp  factorial.cpp
PTSS/ex8/: ARmethod.cpp  also penna model implementation  pi_MC.cpp
PTSS/ex8/penna/: CMakeLists.txt  Penna.layout  fish.cpp  genome-test.cpp  genome.cpp  population.hpp
PTSS/ex9/: simpson_benchmark.cpp  simpson_template.hpp  simpson_virtual.cpp  simpson_virtual.hpp  timer.hpp
PTSS/pi15-ex5/: penna.hpp  plan_my.txt  simpson_main.cpp
PTSS/pt-ex7/: array.hpp  container_benchmark.cpp  iterator.hpp  main.cpp
PTSS/pt15-collaborative/: CMakeLists.txt  README.md  main.cpp  simpson_integral.cpp  simpson_integral.hpp
PTSS/pt15-ex2/: README.md  [FIX]problem_2_1_2_woVector.cpp  output.txt  problem_2_1_1.cpp  problem_2_1_2.cpp
PTSS/pt15-ex4/: CMakeLists.txt  epsilon_template.cpp  testerClass.cpp  testerClass.h
PTSS/pt15-ex4/benchmark/: CMakeLists.txt
PTSS/pt15-ex4/random/: CMakeLists.txt  random.cpp  random.hpp
PTSS/pt15-ex4/timer/: CMakeLists.txt  timer.cpp  timer.hpp
PTSS/pt15-todorove/: cache_effects.cpp  machine_epsilon.cpp  test.cpp  (+2 more)
(+14 files in other folders)
